# AviatoEngine

./: .gitignore  CMakeLists.txt  compile.sh  main.cpp
graphics/: Application.cpp  Application.h  Window.cpp  Window.h
graphics/api/: Platform.h
graphics/api/WIN32/: Win32Window.cpp  Win32Window.h
math/: AVI_Math.h  Math.cpp  Math.h  Vector2.h  Vector3.h  Vector4.h
util/: AVI_Memory.h  AVI_String.cpp  AVI_String.h  AVI_WString.cpp  AVI_WString.h  LeakDetector.cpp  LeakDetector.h  Memory.h  String.cpp  String.h  String16.cpp  String16.h  String8.cpp  String8.h
util/string/: AVI_String.cpp  AVI_String.h  AVI_String16.cpp  AVI_String16.h  AVI_String8.cpp  AVI_String8.h  AVI_WString.cpp  AVI_WString.h
